--- a/HTML - response/css/main.scss
+++ b/HTML - response/css/main.scss
@@ -124,50 +124,53 @@ div.clear-fix{
 	font-family:Meiryo;
 	font-size:15px;
 	font-weight:bold;
+
+	div.inner div.menu ul li
+	{
+		display:inline-block;
+		padding:20px 0px 20px 0px;
+		margin-left:-4px;
+	}
+
+
+	div.inner div.menu ul li:last-child
+	{
+		display: inline-block;
+	    padding: 20px 0px 20px 0px;
+	    margin-left: -4px;
+	}
+
+	div.inner div.menu ul li:first-child
+	{
+		display:inline-block;
+		padding:20px 0px 20px 0px;
+		margin-left:0px;
+	}
+
+	div.inner div.menu ul li a
+	{
+		text-decoration:none;
+		text-transform:uppercase;
+		color: #73523f;
+		border-left: 2px solid #ccc6c2;
+		padding:0px 32px 0px 32px;
+		text-align:center;
+	}
+
+	div.inner div.menu ul li:last-child a
+	{
+		text-decoration: none;
+	    text-transform: uppercase;
+	    color: #73523f;
+	    border-right: 2px solid #ccc6c2;
+	    padding: 0px 30px 0px 30px;
+	    text-align: center;
+	}
+
 }
 
-#navi div.inner div.menu ul li
+div.banner
 {
-	display:inline-block;
-	padding:20px 0px 20px 0px;
-	margin-left:-4px;
-}
-
-#navi div.inner div.menu ul li:last-child
-{
-	display: inline-block;
-    padding: 20px 0px 20px 0px;
-    margin-left: -4px;
-}
-
-#navi div.inner div.menu ul li:first-child
-{
-	display:inline-block;
-	padding:20px 0px 20px 0px;
-	margin-left:0px;
-}
-
-#navi div.inner div.menu ul li a
-{
-	text-decoration:none;
-	text-transform:uppercase;
-	color: #73523f;
-	border-left: 2px solid #ccc6c2;
-	padding:0px 32px 0px 32px;
-	text-align:center;
-}
-
-#navi div.inner div.menu ul li:last-child a
-{
-	text-decoration: none;
-    text-transform: uppercase;
-    color: #73523f;
-    border-right: 2px solid #ccc6c2;
-    padding: 0px 30px 0px 30px;
-    text-align: center;
-}
-
-div.banner{
 	width:100%;
 	height:394px;
 	display:inline-block;
@@ -177,50 +180,180 @@ div.banner{
 	background:url(../images/bg_banner.jpg) repeat-x center top;
 	text-align:center;
 	float:left;
+
+	div.inner div.slide
+	{
+		height:380px;
+		width:100%;
+		max-width:960px;
+		min-width:960px;
+		display:block;
+		text-align:center;
+		margin:0px auto;
+
+		img.banner
+		{
+			height:380px;
+			width:100%;
+			max-width:960px;
+			min-width:960px;
+			text-align:center;
+			margin:0px auto;
+			position:relative;
+		}
+
 	}
-div.banner div.inner div.slide{
-	height:380px;
-	width:100%;
-	max-width:960px;
-	min-width:960px;
-	display:block;
-	text-align:center;
-	margin:0px auto;
-	}	
-img.banner{
-	height:380px;
-	width:100%;
-	max-width:960px;
-	min-width:960px;
-	text-align:center;
-	margin:0px auto;
-	position:relative;
-	}
+
+}
 
 #article
 {
 	margin-top:40px;
-}
 
-#article div.inner #content
-{
-	width: 73%;
-    float: left;
-}
+	div.inner
+	{
+		#content
+		{
+			width: 73%;
+	    	float: left;
 
-#article div.inner #aside
-{
-	width:24%;
-	float:right;
-}
+	    	div.content_1
+			{
+				width: 100%;
+			    float: left;
+			    font-family: Meiryo;
+			    font-size: 13px;
+			    font-weight: normal;
 
-div.content_1
-{
-	width: 100%;
-    float: left;
-    font-family: Meiryo;
-    font-size: 13px;
-    font-weight: normal;
+			    div.image_1
+				{
+				    margin-top: 25px;
+				    float: left;
+				    width: 37%;
+				}
+
+
+				div.text_1
+				{
+					float: right;
+				    margin-top: 20px;
+				    width: 63%;
+				    text-align: left;
+
+				    p
+					{
+						text-align: left;
+					    line-height: 20px;
+					    width: 95%;
+					    padding-bottom: 25px;
+					    font-size: 12.8px;
+					    padding-left: 30px;
+
+					    strong 
+						{
+							font-weight:bold;
+						}
+
+					}
+
+				}
+
+			}
+
+
+			div.content_2
+			{
+				margin-top:40px;
+
+				div.boxs
+				{
+					margin-top:30px;
+					float:left;
+					width:100%;
+
+					div.box:first-child
+					{
+						width: 220px;
+					    float: left;
+					    border: 1px solid #ccc6c2;
+					    height: 328px;
+					}
+
+					div.box:nth-child(2)
+					{
+						width: 220px;
+					    float: left;
+					    margin-left: 17px;
+					    margin-right: 17px;
+					    border: 1px solid #ccc6c2;
+					    height: 328px;
+					}
+
+					div.box:last-child
+					{
+						width:220px;
+						float:left;
+						border:1px solid #ccc6c2;
+						height: 328px;
+
+						a
+						{
+							padding-left:12.5px;
+							display:inline-block;
+							margin-top:15px;
+						}
+
+					}
+
+					div.box_text
+					{
+						width: 100%;
+					    float: left;
+
+					    p
+						{
+							padding: 7px 10px 7px 10px;
+						    display: inline-block;
+							color: #73523f;
+							font-family:Meiryo;
+							font-size:13px;
+							font-weight:normal;
+							line-height:20px;
+						}
+
+
+						a
+						{
+							padding-left:12.5px;
+							display:inline-block;
+							margin-top:-4px;
+
+							&:hover
+							{
+								padding-left:12.5px;
+								display:inline-block;
+								margin-top:-4px;
+								opacity:0.8;
+							}
+
+						}
+
+					}
+
+				}
+
+			}
+
+		}
+
+		#aside
+		{
+			width:24%;
+			float:right;
+		}
+
+	}
+
 }
 
 div.title
@@ -255,113 +388,6 @@ div.nicdark_divider.big > span {
 
 .nicdark_radius {
     border-radius: 5px 5px 5px 5px;
-}
-
-div.image_1
-{
-    margin-top: 25px;
-    float: left;
-    width: 37%;
-}
-
-div.content_1 div.text_1
-{
-	float: right;
-    margin-top: 20px;
-    width: 63%;
-    text-align: left;
-}
-
-div.text_1 p
-{
-	text-align: left;
-    line-height: 20px;
-    width: 95%;
-    padding-bottom: 25px;
-    font-size: 13px;
-    padding-left: 30px;
-}
-
-div.text_1 p strong 
-{
-	font-weight:bold;
-}
-
-div.content_2
-{
-	margin-top:40px;
-}
-
-div.boxs
-{
-	margin-top:30px;
-	float:left;
-	width:100%;
-}
-
-div.box:first-child
-{
-	width: 220px;
-    float: left;
-    border: 1px solid #ccc6c2;
-    height: 328px;
-}
-
-div.box:nth-child(2)
-{
-	width: 220px;
-    float: left;
-    margin-left: 17px;
-    margin-right: 17px;
-    border: 1px solid #ccc6c2;
-    height: 328px;
-}
-
-div.box:last-child
-{
-	width:220px;
-	float:left;
-	border:1px solid #ccc6c2;
-	height: 328px;
-}
-
-div.box_text
-{
-	width: 100%;
-    float: left;
-}
-
-div.box_text p
-{
-	padding: 7px 10px 7px 10px;
-    display: inline-block;
-	color: #73523f;
-	font-family:Meiryo;
-	font-size:13px;
-	font-weight:normal;
-	line-height:20px;
-}
-
-div.box_text a
-{
-	padding-left:12.5px;
-	display:inline-block;
-	margin-top:-4px;
-}
-
-div.box_text a:hover
-{
-	padding-left:12.5px;
-	display:inline-block;
-	margin-top:-4px;
-	opacity:0.8;
-}
-
-div.box:last-child a
-{
-	padding-left:12.5px;
-	display:inline-block;
-	margin-top:15px;
 }
 
 div.content_3
