--- a/HTML - response/css/main.css
+++ b/HTML - response/css/main.css
@@ -108,46 +108,79 @@ div.clear-fix {
   border-top: 1px solid #ccc6c2;
   border-bottom: 1px solid #ccc6c2;
   width: 100%;
-  height: 53px;
+  height: 55px;
   font-family: Meiryo;
   font-size: 15px;
   font-weight: bold; }
-
-/* line 129, main.scss */
+  
+#navi div.inner div.menu ul {
+  text-align: center;
+  text-transform:uppercase;
+}
 #navi div.inner div.menu ul li {
+  color: #73523f;
   display: inline-block;
-  padding: 20px 0px 20px 0px;
-  margin-left: -4px; }
-
-/* line 136, main.scss */
-#navi div.inner div.menu ul li:last-child {
-  display: inline-block;
-  padding: 20px 0px 20px 0px;
-  margin-left: -4px; }
-
-/* line 143, main.scss */
-#navi div.inner div.menu ul li:first-child {
-  display: inline-block;
-  padding: 20px 0px 20px 0px;
-  margin-left: 0px; }
-
-/* line 150, main.scss */
+  width: 137px;
+  height: 40px;
+  margin-left: -5px;
+  margin-top: 15px;
+}
 #navi div.inner div.menu ul li a {
   text-decoration: none;
-  text-transform: uppercase;
   color: #73523f;
+  display: block;
   border-left: 2px solid #ccc6c2;
-  padding: 0px 32px 0px 32px;
-  text-align: center; }
+  padding:5px;
+}
 
-/* line 160, main.scss */
 #navi div.inner div.menu ul li:last-child a {
   text-decoration: none;
-  text-transform: uppercase;
   color: #73523f;
+  display: block;
   border-right: 2px solid #ccc6c2;
-  padding: 0px 30px 0px 30px;
-  text-align: center; }
+  padding:5px;
+}
+
+#navi div.inner div.menu ul li a:hover{
+  color: #fff;
+  background: #fe9407;
+}
+
+#navi div.inner div.menu ul li ul.sub-menu {
+  display: none;
+  position: absolute;
+  z-index:1000;
+  background: #ffc472;
+  font-size:13px;
+  margin-top: 15px;
+}
+#navi div.inner div.menu ul li {
+  position: relative;
+}
+#navi div.inner div.menu ul li:hover ul.sub-menu {
+  display: block;
+}
+#navi div.inner div.menu ul li ul.sub-menu li {
+  margin-left: 0 !important;
+  border-bottom: 1px solid #73523f;
+}
+
+#navi div.inner div.menu ul li ul.sub-menu li a {
+  font-size:13px;
+}
+
+#navi div.inner div.menu ul li ul.sub-menu li a:hover {
+  background: #fe9407;
+}
+
+label.show-menu {
+    text-decoration: none;
+    color: #fff;
+    background: #fe9407;
+    text-align: center;
+    padding: 10px 0;
+    display: none;
+}
 
 /* line 170, main.scss */
 div.banner {
@@ -252,7 +285,7 @@ div.content_1 div.text_1 {
 div.text_1 p {
   text-align: left;
   line-height: 20px;
-  width: 95%;
+  width: 96%;
   padding-bottom: 25px;
   font-size: 13px;
   padding-left: 30px; }
@@ -460,6 +493,9 @@ img.aside_map {
 img.aside_button {
   padding: 20px 0px 15px 10px;
   width: 90%; }
+  
+img:hover.aside_button {
+  opacity:0.8; }
 
 /* line 524, main.scss */
 #footer {
@@ -487,15 +523,20 @@ div.menu_footer_1 {
   width: 300px;
   height: 200px;
   border: 2px solid #ccc6c2; }
+  
+div.menu_footer_1 ul {
+  list-style: none;
+  float: left;
+  width: 50%; }
 
 /* line 556, main.scss */
 div.menu_footer_1 ul li {
-  padding: 5px 10px 5px 0px;
+  padding: 5px 5px 5px 0px;
   display: inline-block; }
 
 /* line 562, main.scss */
 div.menu_footer_1 ul li img {
-  padding: 5px 10px 5px 30px; }
+  padding: 7px 0px 5px 30px; }
 
 /* line 567, main.scss */
 div.menu_footer_1 ul li a {
@@ -516,7 +557,17 @@ div.menu_footer_2 {
 
 /* line 586, main.scss */
 div.menu_footer_2 ul li {
-  padding: 3px 10px 3px 0px; }
+  padding: 5px 0px 1px 5px; }
+
+div.menu_footer_2 ul li:first-child {
+  padding: 10px 0px 10px 5px;
+  display: inline-flex; }
+  
+div.menu_footer_2 ul li img {
+  padding: 0px 0px 5px 15px; }
+  
+div.menu_footer_2 ul li:first-child img.aside_bullet_1 {
+  padding: 0px 0px 5px 10px; }
 
 /* line 591, main.scss */
 div.menu_footer_2 ul li a {
@@ -538,3 +589,4 @@ div.copyright {
   font-weight: bold; }
 
 /*# sourceMappingURL=main.css.map */
+
